--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -97,6 +97,11 @@ tlsTrustCertsFilePath=
 # Accept untrusted TLS certificate from client
 tlsAllowInsecureConnection=false
 
+# Max number of unacknowledged messages allowed to receive messages by a consumer on a shared subscription. Broker will stop sending
+# messages to consumer once, this limit reaches until consumer starts acknowledging messages back. 
+# Using a value of 0, is disabling unackeMessage limit check and consumer can receive messages without any restriction 
+maxUnackedMessagesPerConsumer=50000
+
 ### --- Authentication --- ###
 
 # Enable authentication
