Use multiple ZK sessions for BK and ManagedLedger

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -98,8 +98,8 @@ tlsTrustCertsFilePath=
 tlsAllowInsecureConnection=false
 
 # Max number of unacknowledged messages allowed to receive messages by a consumer on a shared subscription. Broker will stop sending
-# messages to consumer once, this limit reaches until consumer starts acknowledging messages back. 
-# Using a value of 0, is disabling unackeMessage limit check and consumer can receive messages without any restriction 
+# messages to consumer once, this limit reaches until consumer starts acknowledging messages back.
+# Using a value of 0, is disabling unackeMessage limit check and consumer can receive messages without any restriction
 maxUnackedMessagesPerConsumer=50000
 
 # Max number of concurrent lookup request broker allows to throttle heavy incoming lookup traffic
@@ -213,6 +213,9 @@ managedLedgerCursorRolloverTimeInSeconds=14400
 # crashes.
 managedLedgerMaxUnackedRangesToPersist=1000
 
+# Number of independent ZK sessions to open. More sessions will speed
+# up ZK operations by using different threads and connections
+managedLedgerZooKeeperSessions=1
 
 
 ### --- Load balancer --- ###
