Set version to 1.15-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <groupId>com.yahoo.pulsar</groupId>
   <artifactId>pulsar</artifactId>
 
-  <version>1.14</version>
+  <version>1.15-SNAPSHOT</version>
 
   <name>Pulsar</name>
   <url>https://github.com/yahoo/pulsar</url>
