--- a/conf/websocket.conf
+++ b/conf/websocket.conf
@@ -22,8 +22,11 @@ globalZookeeperServers=
 # Port to use to server HTTP request
 webServicePort=8080
 
-# Control whether to bind directly on localhost rather than on normal hostname
-bindOnLocalhost=false
+# Hostname or IP address the service binds on, default is InetAddress.getLocalHost().getHostName().
+bindAddress=
+
+# Hostname or IP address the service advertises to the outside world. If not set, the value of bindAddress is used.
+advertisedAddress=
 
 # Name of the pulsar cluster to connect to
 clusterName=
