--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -27,8 +27,11 @@ brokerServicePort=6650
 # Port to use to server HTTP request
 webServicePort=8080
 
-# Control whether to bind directly on localhost rather than on normal hostname
-bindOnLocalhost=true
+# Hostname or IP address the service binds on, default is InetAddress.getLocalHost().getHostName().
+bindAddress=
+
+# Hostname or IP address the service advertises to the outside world. If not set, the value of bindAddress is used.
+advertisedAddress=
 
 # Name of the cluster to which this broker belongs to
 clusterName=standalone
