Corrections in comments.

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -30,7 +30,7 @@ webServicePort=8080
 # Hostname or IP address the service binds on, default is InetAddress.getLocalHost().getHostName().
 bindAddress=
 
-# Hostname or IP address the service advertises to the outside world. If not set, the value of bindAddress is used.
+# Hostname or IP address the service advertises to the outside world, default is InetAddress.getLocalHost().getHostName().
 advertisedAddress=
 
 # Name of the cluster to which this broker belongs to
