--- a/pulsar-broker/src/test/resources/configurations/pulsar_broker_test.conf
+++ b/pulsar-broker/src/test/resources/configurations/pulsar_broker_test.conf
@@ -5,7 +5,7 @@ brokerServicePort=6650
 brokerServicePortTls=6651
 webServicePort=8080
 webServicePortTls=4443
-bindAddress=
+bindAddress=0.0.0.0
 advertisedAddress=
 clusterName="test_cluster"
 brokerShutdownTimeoutMs=3000
