Updates comments for advertisedAddress in the configuration files.

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -27,10 +27,10 @@ brokerServicePort=6650
 # Port to use to server HTTP request
 webServicePort=8080
 
-# Hostname or IP address the service binds on, default is InetAddress.getLocalHost().getHostName().
-bindAddress=
+# Hostname or IP address the service binds on, default is 0.0.0.0.
+bindAddress=0.0.0.0
 
-# Hostname or IP address the service advertises to the outside world, default is InetAddress.getLocalHost().getHostName().
+# Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
 advertisedAddress=
 
 # Name of the cluster to which this broker belongs to
