--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -37,10 +37,10 @@ webServicePortTls=8443
 # Enable the WebSocket API service in broker
 webSocketServiceEnabled=false
 
-# Hostname or IP address the service binds on, default is InetAddress.getLocalHost().getHostName().
-bindAddress=
+# Hostname or IP address the service binds on, default is 0.0.0.0.
+bindAddress=0.0.0.0
 
-# Hostname or IP address the service advertises to the outside world. If not set, the value of bindAddress is used.
+# Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
 advertisedAddress=
 
 # Name of the cluster to which this broker belongs to
