--- a/conf/websocket.conf
+++ b/conf/websocket.conf
@@ -22,8 +22,8 @@ globalZookeeperServers=
 # Port to use to server HTTP request
 webServicePort=8080
 
-# Hostname or IP address the service binds on, default is InetAddress.getLocalHost().getHostName().
-bindAddress=
+# Hostname or IP address the service binds on, default is 0.0.0.0.
+bindAddress=0.0.0.0
 
 # Name of the pulsar cluster to connect to
 clusterName=
