Removes bindOnLocalhost=boolean. Adds bindAddress and advertisedAddress. (#26)
Fixes #23

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -27,8 +27,11 @@ brokerServicePort=6650
 # Port to use to server HTTP request
 webServicePort=8080
 
-# Control whether to bind directly on localhost rather than on normal hostname
-bindOnLocalhost=true
+# Hostname or IP address the service binds on, default is 0.0.0.0.
+bindAddress=0.0.0.0
+
+# Hostname or IP address the service advertises to the outside world. If not set, the value of InetAddress.getLocalHost().getHostName() is used.
+advertisedAddress=
 
 # Name of the cluster to which this broker belongs to
 clusterName=standalone
