--- a/pulsar-broker/src/test/resources/configurations/pulsar_broker_test.conf
+++ b/pulsar-broker/src/test/resources/configurations/pulsar_broker_test.conf
@@ -5,7 +5,8 @@ brokerServicePort=6650
 brokerServicePortTls=6651
 webServicePort=8080
 webServicePortTls=4443
-bindOnLocalhost=false
+bindAddress=0.0.0.0
+advertisedAddress=
 clusterName="test_cluster"
 brokerShutdownTimeoutMs=3000
 backlogQuotaCheckEnabled=true
