Print current running unit test in pulsar-broker

--- a/pulsar-broker/src/test/resources/log4j.properties
+++ b/pulsar-broker/src/test/resources/log4j.properties
@@ -11,6 +11,8 @@ log4j.logger.org.apache.bookkeeper=OFF
 
 log4j.logger.com.yahoo.pulsar=OFF
 
+log4j.logger.org.testng.listener.TestListener=INFO
+
 #
 # Log INFO level and above messages to the console
 #
