--- a/pulsar-client/pom.xml
+++ b/pulsar-client/pom.xml
@@ -42,7 +42,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.ning</groupId>
+      <groupId>org.asynchttpclient</groupId>
       <artifactId>async-http-client</artifactId>
     </dependency>
 
@@ -111,7 +111,7 @@
                   <include>org.apache.commons:commons-lang3</include>
                   <include>commons-codec:commons-codec</include>
                   <include>commons-collections:commons-collections</include>
-                  <include>com.ning:async-http-client</include>
+                  <include>org.asynchttpclient:async-http-client</include>
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>com.google.guava:guava</include>
                   <include>com.google.code.gson:gson</include>
@@ -139,8 +139,8 @@
                   <shadedPattern>com.yahoo.pulsar.shade.org.apache.commons</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>com.ning</pattern>
-                  <shadedPattern>com.yahoo.pulsar.shade.com.ning</shadedPattern>
+                  <pattern>org.asynchttpclient</pattern>
+                  <shadedPattern>com.yahoo.pulsar.shade.org.asynchttpclient</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>com.google</pattern>
@@ -153,10 +153,6 @@
                 <relocation>
                   <pattern>com.fasterxml.jackson</pattern>
                   <shadedPattern>com.yahoo.pulsar.shade.com.fasterxml.jackson</shadedPattern>
-                </relocation>
-                <relocation>
-                  <pattern>org.jboss.netty</pattern>
-                  <shadedPattern>com.yahoo.pulsar.shade.org.jboss.netty</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>io.netty</pattern>
