--- a/pom.xml
+++ b/pom.xml
@@ -104,9 +104,9 @@ flexible messaging model and an intuitive client API.</description>
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>com.ning</groupId>
+        <groupId>org.asynchttpclient</groupId>
         <artifactId>async-http-client</artifactId>
-        <version>1.9.38</version>
+        <version>2.0.19</version>
       </dependency>
 
       <dependency>
