--- a/pom.xml
+++ b/pom.xml
@@ -295,19 +295,25 @@ flexible messaging model and an intuitive client API.</description>
       <dependency>
         <groupId>org.glassfish.jersey.core</groupId>
         <artifactId>jersey-server</artifactId>
-        <version>2.8</version>
+        <version>2.23.2</version>
       </dependency>
 
       <dependency>
         <groupId>org.glassfish.jersey.core</groupId>
         <artifactId>jersey-client</artifactId>
-        <version>2.8</version>
+        <version>2.23.2</version>
       </dependency>
 
       <dependency>
         <groupId>org.glassfish.jersey.containers</groupId>
         <artifactId>jersey-container-servlet-core</artifactId>
-        <version>2.8</version>
+        <version>2.23.2</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.glassfish.jersey.containers</groupId>
+        <artifactId>jersey-container-servlet</artifactId>
+        <version>2.23.2</version>
       </dependency>
 
       <dependency>
@@ -374,6 +380,12 @@ flexible messaging model and an intuitive client API.</description>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.1.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+        <version>2.3.3</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
