Implement BrokerHostUsage using java

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -212,10 +212,7 @@ loadBalancerReportUpdateThresholdPercentage=10
 # maximum interval to update load report
 loadBalancerReportUpdateMaxIntervalMinutes=15
 
-# Path for the script used to retrieve system usage
-loadBalancerHostUsageScriptPath=
-
-# Frequency of sar report to collect
+# Frequency of report to collect
 loadBalancerHostUsageCheckIntervalMinutes=1
 
 # Load shedding interval. Broker periodically checks whether some traffic should be offload from
