--- a/pulsar-testclient/pom.xml
+++ b/pulsar-testclient/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>com.yahoo.pulsar</groupId>
 		<artifactId>pulsar</artifactId>
-		<version>1.15.1-SNAPSHOT</version>
+		<version>1.15.1</version>
 		<relativePath>..</relativePath>
 	</parent>
 
