Exclude netty-buffer due to split-package conflict with netty-all artifact

--- a/pulsar-client/pom.xml
+++ b/pulsar-client/pom.xml
@@ -44,6 +44,12 @@
     <dependency>
       <groupId>org.asynchttpclient</groupId>
       <artifactId>async-http-client</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-buffer</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
