--- a/conf/discovery.conf
+++ b/conf/discovery.conf
@@ -17,12 +17,38 @@
 # Zookeeper quorum connection string (comma-separated)
 zookeeperServers=
 
+# Global zookeeper quorum connection string (comma-separated)
+globalZookeeperServers=
+
+# Port to use to server binary-proto request
+servicePort=6650
+
+# Port to use to server binary-proto-tls request
+servicePortTls=6651
+
 # Port that discovery service listen on
 webServicePort=8080
 
 # Port to use to server HTTPS request
 webServicePortTls=8443
 
+# Control whether to bind directly on localhost rather than on normal hostname
+bindOnLocalhost=false
+    
+### --- Authentication --- ###
+
+# Enable authentication
+authenticationEnabled=false
+
+# Authentication provider name list, which is comma separated list of class names (comma-separated)
+authenticationProviders=
+
+# Enforce authorization
+authorizationEnabled=false
+
+# Role names that are treated as "super-user", meaning they will be able to do all admin
+# operations and publish/consume from all topics (comma-separated)
+superUserRoles=
 
 ##### --- TLS --- #####
 # Enable TLS
