--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -194,8 +194,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
     </dependency>
 
     <dependency>
