--- a/pulsar-client-admin/pom.xml
+++ b/pulsar-client-admin/pom.xml
@@ -69,8 +69,8 @@
     </dependency>
     
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
     </dependency>
   </dependencies>
   <build>
@@ -99,7 +99,6 @@
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>com.google.guava:guava</include>
                   <include>com.google.code.gson:gson</include>
-                  <include>org.json:json</include>
                   <include>io.netty:netty</include>
                   <include>io.netty:netty-all</include>
                 </includes>
@@ -116,10 +115,6 @@
                 <relocation>
                   <pattern>com.google</pattern>
                   <shadedPattern>pulsar-admin-shade.com.google</shadedPattern>
-                </relocation>
-                <relocation>
-                  <pattern>org.json</pattern>
-                  <shadedPattern>pulsar-admin-shade.org.json</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>org.jboss.netty</pattern>
