--- a/pulsar-websocket/pom.xml
+++ b/pulsar-websocket/pom.xml
@@ -67,8 +67,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
     </dependency>
 
     <dependency>
