--- a/conf/bookkeeper.conf
+++ b/conf/bookkeeper.conf
@@ -295,8 +295,9 @@ readBufferSizeBytes=4096
 #useHostNameAsBookieID=false
 
 # Stats Provider Class
-#statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
-#codahaleStatsJmxEndpoint=metrics
+statsProviderClass=org.apache.bokkeeper.stats.datasketches.DataSketchesMetricsProvider
+dataSketchesMetricsJsonFileReporter=data/bookie-stats.json
+dataSketchesMetricsUpdateIntervalSeconds=60
 
 
 ## DB Ledger storage configuration
