--- a/pulsar-checksum/pom.xml
+++ b/pulsar-checksum/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>com.yahoo.pulsar</groupId>
     <artifactId>pulsar</artifactId>
-    <version>1.15.2</version>
+    <version>1.15.3-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
