Add Athenz authentication plugin

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -95,6 +95,8 @@ superUserRoles=
 brokerClientAuthenticationPlugin=
 brokerClientAuthenticationParameters=
 
+# Supported Athenz provider domain names(comma separated) for authentication
+athenzDomainNames=
 
 ### --- BookKeeper Client --- ###
 
