--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -122,6 +122,8 @@ superUserRoles=
 brokerClientAuthenticationPlugin=
 brokerClientAuthenticationParameters=
 
+# Supported Athenz provider domain names(comma separated) for authentication
+athenzDomainNames=
 
 ### --- BookKeeper Client --- ###
 
