Pass brokerServiceUrl to websocket service configuration

--- a/conf/websocket.conf
+++ b/conf/websocket.conf
@@ -19,6 +19,10 @@
 # Global Zookeeper quorum connection string
 globalZookeeperServers=
 
+// Pulsar cluster url to connect to broker (optional if globalZookeeperServers present)
+serviceUrl=
+serviceUrlTls=
+
 # Port to use to server HTTP request
 webServicePort=8080
 
@@ -38,6 +42,10 @@ authenticationProviders=
 
 # Enforce authorization
 authorizationEnabled=false
+
+# Role names that are treated as "super-user", meaning they will be able to do all admin
+# operations and publish/consume from all topics
+superUserRoles=
 
 # Authentication settings of the proxy itself. Used to connect to brokers
 brokerClientAuthenticationPlugin=
