--- a/pulsar-broker-common/pom.xml
+++ b/pulsar-broker-common/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>com.yahoo.pulsar</groupId>
     <artifactId>pulsar</artifactId>
-    <version>1.15.6-SNAPSHOT</version>
+    <version>1.15.6</version>
   </parent>
 
   <artifactId>pulsar-broker-common</artifactId>
