Support multiple zookeeper quorum to store cluster-management-configuration and ledger-metadata separately

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -19,6 +19,9 @@
 # Zookeeper quorum connection string
 zookeeperServers=
 
+# Data Zookeeper quorum connection string
+dataZookeeperServers=
+
 # Global Zookeeper quorum connection string
 globalZookeeperServers=
 
@@ -48,6 +51,9 @@ clusterName=
 
 # Zookeeper session timeout in milliseconds
 zooKeeperSessionTimeoutMillis=30000
+
+# Data Zookeeper session timeout in milliseconds
+dataZooKeeperSessionTimeoutMillis=60000
 
 # Time to wait for broker graceful shutdown. After this time elapses, the process will be killed
 brokerShutdownTimeoutMs=3000
