persist and recover individual deleted messages

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -198,6 +198,8 @@ managedLedgerCursorMaxEntriesPerLedger=50000
 # Max time before triggering a rollover on a cursor ledger
 managedLedgerCursorRolloverTimeInSeconds=14400
 
+managedLedgerMaxUnackedRangesToPersist=1000
+
 
 
 ### --- Load balancer --- ###
