--- a/pom.xml
+++ b/pom.xml
@@ -471,6 +471,7 @@ flexible messaging model and an intuitive client API.</description>
             <exclude>pulsar-client-cpp/lib/lz4/lz4.*</exclude>
             <exclude>pulsar-client-cpp/lib/PulsarApi.pb.*</exclude>
             <exclude>pulsar-client-cpp/CMakeFiles/**</exclude>
+            <exclude>pulsar-client-cpp/travis-build.sh</exclude>
           </excludes>
           <mapping>
             <proto>JAVADOC_STYLE</proto>
