add webServiceUrl and brokerServiceUrl to clientTools

--- a/conf/client.conf
+++ b/conf/client.conf
@@ -15,7 +15,8 @@
 # 
 
 # Pulsar Client configuration
-serviceUrl=http://localhost:8080/
+webServiceUrl=http://localhost:8080/
+brokerServiceUrl=pulsar://localhost:6650/
 #authPlugin=
 #authParams=
 #useTls=
