Update log4j.properties, since currently you can't print DEBUG level logs even if you change the configuration.
http://stackoverflow.com/questions/15086818/log4j-debug-messages-not-showing-in-console-despite-isdebugenabled-being-true

--- a/conf/log4j.shell.properties
+++ b/conf/log4j.shell.properties
@@ -27,7 +27,7 @@ log4j.rootLogger=${bookkeeper.root.logger}
 # Log INFO level and above messages to the console
 #
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=INFO
+log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %-5p %m%n
 
