Fixed Discovery Service initialization of global zk cache

--- a/conf/discovery.conf
+++ b/conf/discovery.conf
@@ -20,6 +20,9 @@ zookeeperServers=
 # Global zookeeper quorum connection string (comma-separated)
 globalZookeeperServers=
 
+# ZooKeeper session timeout
+zookeeperSessionTimeoutMs=30000
+
 # Port to use to server binary-proto request
 servicePort=6650
 
@@ -34,7 +37,7 @@ webServicePortTls=8443
 
 # Control whether to bind directly on localhost rather than on normal hostname
 bindOnLocalhost=false
-    
+
 ### --- Authentication --- ###
 
 # Enable authentication
