--- a/pulsar-client-cpp/lib/CMakeLists.txt
+++ b/pulsar-client-cpp/lib/CMakeLists.txt
@@ -16,7 +16,8 @@
 
 file(GLOB PULSAR_SOURCES *.cc lz4/*.c checksum/*.cc)
 
-execute_process(COMMAND /bin/cat ../pom.xml COMMAND /bin/grep -Po "<?<version>[^<]+" COMMAND /bin/sed "s/.*>//g"  COMMAND /usr/bin/head -1 COMMAND /usr/bin/tr -d '\\\n' OUTPUT_VARIABLE PV)
+execute_process(COMMAND cat ../pom.xml COMMAND xmllint --format - COMMAND sed "s/xmlns=\".*\"//g" COMMAND xmllint --stream --pattern /project/version --debug - COMMAND grep -A 2 "matches pattern" COMMAND grep text COMMAND sed "s/.* [0-9] //g" OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE PV)
+
 set (CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -msse4.2 -mpclmul -D_PULSAR_VERSION_=\\\"${PV}\\\"")
 
 add_library(pulsarStatic STATIC ${PULSAR_SOURCES})
