--- a/pom.xml
+++ b/pom.xml
@@ -484,6 +484,7 @@ flexible messaging model and an intuitive client API.</description>
             <exclude>pulsar-client-cpp/lib/checksum/int_types.h</exclude>
             <exclude>pulsar-client-cpp/lib/checksum/crc32c*</exclude>
             <exclude>pulsar-client-cpp/lib/lz4/lz4.*</exclude>
+            <exclude>pulsar-client-cpp/.idea/*</exclude>
             <exclude>pulsar-client-cpp/lib/PulsarApi.pb.*</exclude>
             <exclude>pulsar-client-cpp/CMakeFiles/**</exclude>
             <exclude>pulsar-client-cpp/travis-build.sh</exclude>
