--- a/pulsar-client-cpp/lib/CMakeLists.txt
+++ b/pulsar-client-cpp/lib/CMakeLists.txt
@@ -17,14 +17,18 @@
 file(GLOB PULSAR_SOURCES *.cc lz4/*.c checksum/*.cc)
 
 execute_process(COMMAND cat ../pom.xml COMMAND xmllint --format - COMMAND sed "s/xmlns=\".*\"//g" COMMAND xmllint --stream --pattern /project/version --debug - COMMAND grep -A 2 "matches pattern" COMMAND grep text COMMAND sed "s/.* [0-9] //g" OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE PV)
-
 set (CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -msse4.2 -mpclmul -D_PULSAR_VERSION_=\\\"${PV}\\\"")
 
 add_library(pulsarStatic STATIC ${PULSAR_SOURCES})
 add_library(pulsarShared SHARED ${PULSAR_SOURCES})
 
-set_target_properties(pulsarStatic PROPERTIES OUTPUT_NAME pulsar VERSION ${PV})
-set_target_properties(pulsarShared PROPERTIES OUTPUT_NAME pulsar VERSION ${PV})
+set(LIBRARY_VERSION $ENV{PULSAR_LIBRARY_VERSION})
+if (NOT LIBRARY_VERSION)
+    set(LIBRARY_VERSION ${PV})
+endif(NOT LIBRARY_VERSION)
+
+set_target_properties(pulsarStatic PROPERTIES OUTPUT_NAME ${LIB_NAME} VERSION ${LIBRARY_VERSION})
+set_target_properties(pulsarShared PROPERTIES OUTPUT_NAME ${LIB_NAME} VERSION ${LIBRARY_VERSION})
 
 target_link_libraries(pulsarStatic ${COMMON_LIBS})
 target_link_libraries(pulsarShared ${COMMON_LIBS})
