Introduce new load manager API

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -293,3 +293,30 @@ keepAliveIntervalSeconds=30
 
 # How often broker checks for inactive topics to be deleted (topics with no subscriptions and no one connected)
 brokerServicePurgeInactiveFrequencyInSeconds=60
+
+# Number of samples to use for short term time window
+numShortSamples=50
+
+# Number of samples to use for long term time window
+numLongSamples=1000
+
+# How often in seconds to update the broker data
+brokerDataUpdateIntervalSeconds=60
+
+# How often in seconds to update the bundle data
+bundleDataUpdateIntervalSeconds=60
+
+# Default throughput in to assume for new bundles
+defaultMsgThroughputIn=50000
+
+# Default throughput out to assume for new bundles
+defaultMsgThroughputOut=50000
+
+# Default message rate in to assume for new bundles
+defaultMsgRateIn=50
+
+# Default message rate out to assume for new bundles
+defaultMsgRateOut=50
+
+# Name of load manager to use
+loadManagerName=SimpleLoadManager
