HTTP lookups for c++ client lib (#317)

--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -32,6 +32,11 @@ find_library(LOG4CXX_LIBRARY_PATH log4cxx)
 find_library(CURL_LIBRARY_PATH curl)
 find_path(LOG4CXX_INCLUDE_PATH log4cxx/logger.h)
 find_path(GTEST_INCLUDE_PATH gtest/gtest.h)
+find_library(LIB_JSON jsoncpp)
+
+if (NOT LIB_JSON)
+    find_library(LIB_JSON json_cpp)
+endif (NOT LIB_JSON)
 
 set(ADDITIONAL_LIBRARIES $ENV{PULSAR_ADDITIONAL_LIBRARIES})
 link_directories( $ENV{PULSAR_ADDITIONAL_LIBRARY_PATH} )
@@ -56,6 +61,7 @@ set(COMMON_LIBS
   ${LOG4CXX_LIBRARY_PATH}
   ${CURL_LIBRARY_PATH}
   ${ADDITIONAL_LIBRARIES}
+  ${LIB_JSON}
 )
 
 link_directories(${CMAKE_BINARY_DIR}/lib)
