--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -41,6 +41,8 @@ endif (NOT LIB_JSON)
 
 if (NOT JSON_INCLUDE_PATH)
     find_path(JSON_INCLUDE_PATH json)
+else (NOT JSON_INCLUDE_PATH)
+    set(JSON_INCLUDE_PATH ${JSON_INCLUDE_PATH}/jsoncpp/)
 endif (NOT JSON_INCLUDE_PATH)
 
 set(ADDITIONAL_LIBRARIES $ENV{PULSAR_ADDITIONAL_LIBRARIES})
