--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -24,10 +24,12 @@ set (CMAKE_CXX_FLAGS "-Wno-deprecated-declarations ${CMAKE_CXX_FLAGS}")
 find_package(Boost REQUIRED COMPONENTS program_options filesystem regex thread system)
 find_package(OpenSSL REQUIRED)
 find_package(ZLIB REQUIRED)
-find_package(ProtoBuf QUIET)
-if(NOT ProtoBuf_FOUND)
-  find_library(PROTOBUF_LIBRARIES protobuf)
-endif()
+if (NOT $ENV{PROTOBUF_LIBRARIES})
+  find_package(ProtoBuf QUIET)
+  if (NOT ProtoBuf_FOUND)
+    find_library(PROTOBUF_LIBRARIES protobuf)
+  endif (NOT ProtoBuf_FOUND)
+endif (NOT PROTOBUF_LIBRARIES)
 find_library(LOG4CXX_LIBRARY_PATH log4cxx)
 find_library(CURL_LIBRARY_PATH curl)
 find_path(LOG4CXX_INCLUDE_PATH log4cxx/logger.h)
