Add ability to filter brokers based on their build version

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -80,6 +80,9 @@ clientLibraryVersionCheckAllowUnversioned=true
 # to service discovery health checks
 statusFilePath=
 
+# Version string (optional) used during deployments to minimize impact to bundles which get reassigned
+brokerVersionString=default
+
 ### --- Authentication --- ###
 
 # Enable TLS
