Prefer brokers running the latest software version, minimizing bundle impact during rolling deployments

--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -30,13 +30,7 @@
   <packaging>jar</packaging>
   <name>Pulsar Broker</name>
 
-  <properties>
-    <timestamp>${maven.build.timestamp}</timestamp>
-    <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-  </properties>
-
   <dependencies>
-
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
@@ -201,6 +195,12 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.zafarkhaja</groupId>
+      <artifactId>java-semver</artifactId>
+      <version>0.9.0</version>
     </dependency>
 
     <dependency>
